[tool.poetry]
name = "async-doclient"
version = "0.1.2"
description = "Digitalocean client for python"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Turall/doclient"
repository = "https://github.com/Turall/doclient"
authors = ["Tural Muradov <tural_m@hotmail.com>"]
packages = [
    {include = "doclient"}
]

[tool.poetry.dependencies]
python = "^3.8.1"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
pydantic = "^1.10.6"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
py_version=39
skip_glob = ["static/*", ".github/*", ".venv/*", "venv/*", "temp/*", "infra/*", ".vscode/*"]
skip = [".gitignore", ".dockerignore", ".md", ".yaml", ".yml", ".lock",".toml"]

